--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -2,10 +2,8 @@
   background-color: var(--color6);
   z-index: 10000;
   position: fixed;
-  /* top: 0; */
   width: 100%;
   padding: 18px;
-  /* padding: 2rem 0; */
 }
 
 .nav {
@@ -17,39 +15,40 @@
 }
 
 .nav-item {
+  display: flex; /* Make nav-item a flex container */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
   margin: 0 0.5rem;
+  height: 100%; /* Allow the item to take full height */
 }
 
 .nav-right {
   margin-left: auto;
   margin-right: 40px;
-  /* padding-right: 25px; */
 }
 
 .nav-link {
   text-decoration: none;
   color: white;
   font-size: 0.9em;
+  display: inline-block; /* Make it behave like a block element */
+  text-align: center; /* Center the text horizontally inside the nav-link */
 }
 
 .nav-link.active {
   font-weight: 600;
-  /* color: var(--color4); */
-  /* background-color: var(--color1); */
   border-radius: 2px;
 }
 
 .nav-link:hover {
-  /* background-color: var(--color1); */
-  /* color: var(--color4); */
   color: white;
-  /* border-radius: 2px; */
   font-weight: 600;
 }
-nav h1 {
-  margin-right: auto;
-}
-nav a {
-  color: var(--color3);
-  padding: 4px 10px;
+
+/* Ensure nav-link text is centered when wrapping into multiple lines */
+.nav-item > .nav-link {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Vertically center content */
+  align-items: center; /* Horizontally center content */
 }
